--- a/index.html
+++ b/index.html
@@ -11,11 +11,25 @@
     <h1>lanches sstorm </h1>
   </header>
   <img src="image 9 (1).png" alt="imagem de um lanche e suco">
-  <h2>o melhor lanche da sua vida</h2>
+  <h2>storm lanches o melhor lanche da sua vida</h2>
   <p>já pensou em matar sua fome agora?ligue na storm  o melhor lanche da sua vidalanches feitos na hora com uma grande 
     rapidez, sendo assim economizando seu 
     tempo com ingredientes de primeira linha
-    100% saudavel com reduçao de gordura  
     </p>
+
+    <div>
+      <h3>diferencial</h3>
+      <h4>ingredientes frescos e lanches com  reduçao de gordura brinde compre um lanche e ganhe uma coca cola gratis</h4>
+
+    </div>
+        <img src="image 9 (1).png" alt="imagem de um lanche">
+
+          <footer>
+          <p>criado por gustavo</p>
+          <p>
+            55438869391
+          </p>
+          </footer>
+         
 </body>
 </html>
